[package]
name = "tokiocli"
version = "0.1.1"
edition = "2021"
description = "An Unix CLI based on Tokio"
readme = "README.md"
repository = "https://github.com/guillaumepellegrino/tokiocli"
license = "MIT"
authors = ["Guillaume Pellegrino <guillaume.pellegrino@yahoo.com>"]
keywords = ["cli", "console", "unix", "tokio", "async"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
termios = "0.3.3"
